# ntv2-gst

./: .gitignore  README  README.md
gst-plugin/: AUTHORS  Makefile.am  NEWS  README  configure.ac
gst-plugin/aja/: Makefile  Makefile.am  gstaja.cpp  gstaja.h  gstajaaudiosink.cpp  gstajaaudiosink.h  gstajaaudiosrc.cpp  gstajaaudiosrc.h  gstajadeviceprovider.cpp  gstajadeviceprovider.h  gstajahevcsrc.cpp  gstajahevcsrc.h  gstajavideosink.cpp  gstajavideosink.h  gstajavideosrc.cpp  gstajavideosrc.h  gstntv2.cpp  gstntv2.h
gstAJA.xcodeproj/: project.pbxproj
qtAjaGst/: qtAjaGst.pro
